updated readme, text color, added minikube blogpost, fixed ingress.yml

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    color: var(--accent-color);
+    color: var(--main-text-color);
     font-weight: bold;
 }
 
